force-app/main/default/objects/Big_Object__b/Big_Object__b.object-meta.xml
<CustomObject>
    <label>Big Object</label>
    <pluralLabel>Big Objects</pluralLabel>
</CustomObject>