force-app/main/default/objects/Big_Object__b/fields/ContactLookup__c.field-meta.xml
<CustomField>
    <fullName>ContactLookup__c</fullName>
    <label>ContactLookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ConctactLookup</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>