force-app/main/default/objects/Big_Object__b/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <label>Field 1</label>
    <type>DateTime</type>
</CustomField>