force-app/main/default/objects/Big_Object__b/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>